# pypushover

./: pyproject.toml
src/pypushover/: __init__.py  cli.py  elapsed_time.py  keys.py  notify_on_error.py  pigeon.py  pushover.py
tests/: test_keys.py  test_pigeon.py
