[project]
name = "pypushover"
version = "0.1.0"
description = "Small package to send push notifications to your phone using the Pushover API."
readme = "README.md"
authors = [
    { name = "MarcellGranat", email = "granatcellmar98@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "python-dotenv>=1.0.1",
    "requests>=2.0",
]

[project.scripts]
ppo = "pypushover.cli:show"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
